#Set source files 
set( srcs 
		  "assy.cpp"
		  "Base64_Rest.cpp"
		  "Certs.cpp"
		  "diag.cpp"
		  "Hams.cpp"
		  "httpd.cpp"
		  "httpd_basic_authentication.cpp"
		  "httpd_common.cpp"
		  "httpd_digest_authentication.cpp"
		  "httpd_rest_dci.cpp"
		  "httpd_rs_struct.cpp"
		  "MD5_Digest.cpp"
		  "REST.cpp"
		  "REST_Common.cpp"
		  "REST_FUS_Interface.cpp"
		  "REST_Log.cpp"
		  "Rest_WebUI_Interface.cpp"
		  "Server.cpp"
		  "Server_IO.cpp"
		  "TLS_Ram.cpp"
		  "Unicode_Util.cpp"
		  "User_Management.cpp"
		  "User_Session.cpp"
		  "Yxml.cpp"  
		  "modbus.cpp"

    )
   
#Set include directories
set (include_dirs "."
				  "../"
				  "../../BF"
				  "../../BF/DCI"
				  "../../BF/Modbus"
				  "../../DebugManager"
				  "../../Lib"
				  "../../MiscCode"
				  "../../MiscCode/FUS"
				  "../../uC/ESP32D0WD"
				  "../../OS_FreeRTOS"
				  "../../NV"
				  "../../NVCtrls"
				  "../../ThirdParty/crypto_matixssl"
				  "../../ThirdParty/crypto_matixssl/matrixssl"
  				  "../../ThirdParty/crypto_matixssl/matrixssl_ltk"
				  "../../ThirdParty/crypto_matixssl/apps/ssl"
				  "../../ThirdParty/crypto_matixssl/core"
				  "../../ThirdParty/crypto_matixssl/core/include"
				  "../../ThirdParty/crypto_matixssl/core/osdep/include"
				  "../../ThirdParty/crypto_matixssl/crypto"
				  "../../Crypt_API"
				  "../../Crypt_API/API_Matrixssl"
				  "../../TimeConversion"
				  "../../uC/Generic"
				  "../../../../Code"
				  "../../../../Code/BFData"
				  "../../../../Code/Config"
 				  "../../../../Code/Prod_Spec_Logging"
				  "../../../../esp32_common/esp-idf/components/freertos/include/freertos"
				  "../../../../esp32_common/esp-idf/components/lwip/lwip/src/include/lwip"
				  "../../../../esp32_common/esp-idf/components/esp_system/include"
				  "../../../../esp32_common/esp-idf/components/esp_event/include"
				  "../../../../esp32_common/esp-idf/components/nvs_flash/include"
				  "../../../../esp32_common/esp-idf/components/spi_flash/include"
				  "../../../../esp32_common/esp-idf/components/lwip/lwip/src/include/lwip"	
				  "../../../../esp32_common/esp-idf/components/lwip/port/esp32/include"			  
				  "../../../../esp32_common/esp-idf/components/esp_common/include"
				  "../../../../esp32_common/esp-idf/components/spi_flash/include"				  				  
				  "../../../../esp32_common/esp-idf/components/nvs_flash/include"
				  "../../../../esp32_common/esp-idf/components/app_update/include/"
				  "../../../../esp32_common/esp-idf/components/bootloader_support/include"
)
    
#Register source files and include directories
idf_component_register( SRCS "${srcs}"
                        INCLUDE_DIRS "${include_dirs}"
                      )
#Adding Compiler option for this component to disable re-order warnings
set_target_properties(${COMPONENT_LIB} PROPERTIES COMPILE_FLAGS "-Wno-reorder -Wno-unused-value")
